fix to normalization of VB derivative

--- a/analysis/data_visualization_paper.ipynb
+++ b/analysis/data_visualization_paper.ipynb
@@ -57,7 +57,7 @@
     "    nc_unnorm = -100\n",
     "    nc = -100\n",
     "\n",
-    "    # energy range for numerically for degenerate bands\n",
+    "    # energy range for numerically degenerate bands\n",
     "    degen_factor = 0.01\n",
     "    \n",
     "    # parse the structure file for the bond length\n",
@@ -73,8 +73,13 @@
     "        binary = True\n",
     "    \n",
     "    # before calculating the bond length, we need to standardize the cell\n",
-    "    # to obtain the bounding box uf the unit cell to normalize the derivatives\n",
+    "    # to obtain the characteristic lengths of the unit cell to normalize the derivatives\n",
     "    structure = qe_helper.qe_standardize_cell(structure, symprec=0.1)\n",
+    "    try:\n",
+    "        _, structure = qe_helper.qe_get_ibrav(structure)\n",
+    "    except:\n",
+    "        print(f\"Using standardize_cell for {calc_id}\")\n",
+    "        structure = qe_helper.qe_standardize_cell(structure, symprec=0.1)\n",
     "    boxlengths = np.max(np.abs(structure.lattice.matrix),axis=0)\n",
     "\n",
     "    # create a supercell to estimated the average minimal bond length more easily\n",
@@ -1361,7 +1366,7 @@
     "\n",
     "# annotate the outliers\n",
     "axins.annotate(r\"SnO$_2$\", xy=(result_df[\"vbm_deriv\"][\"mp-856\"], result_df[\"WM_total\"][\"mp-856\"]),\n",
-    "               xycoords=\"data\", xytext=(-25, -25), textcoords=\"offset points\", arrowprops=dict(arrowstyle=\"->\"), fontsize=fs-4)\n",
+    "               xycoords=\"data\", xytext=(-15, -23), textcoords=\"offset points\", arrowprops=dict(arrowstyle=\"->\"), fontsize=fs-4)\n",
     "axins.annotate(r\"NaI\", xy=(result_df[\"vbm_deriv\"][\"mp-23268\"], result_df[\"WM_total\"][\"mp-23268\"]),\n",
     "               xycoords=\"data\", xytext=(-40, 10), textcoords=\"offset points\", arrowprops=dict(arrowstyle=\"->\"), fontsize=fs-4)\n",
     "axins.annotate(r\"AlN\", xy=(result_df[\"vbm_deriv\"][\"mp-661\"], result_df[\"WM_total\"][\"mp-661\"]),\n",
@@ -1482,7 +1487,7 @@
     "axes[2].tick_params(bottom=True, top=True, left=True, right=True, which=\"both\", \n",
     "                    width=1, length=4, direction=\"out\")\n",
     "axes[2].tick_params(labelbottom=True, labeltop=False, labelleft=True, labelright=False)\n",
-    "axes[2].set_xlabel(r\"$D$ (eV\\AA)\", size=fs)\n",
+    "axes[2].set_xlabel(r\"$D$ (eV\\AA$^2$)\", size=fs)\n",
     "axes[2].set_ylabel(r\"$E_g^\\mathrm{indir}$ (eV)\", size=fs)\n",
     "axes[2].xaxis.set_ticks([0, 1, 2, 3, 4, 5, 6, 7, 8])\n",
     "axes[2].xaxis.set_ticklabels([\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\"])\n",
