--- a/analysis/data_visualization_supplement.ipynb
+++ b/analysis/data_visualization_supplement.ipynb
@@ -74,8 +74,13 @@
     "        binary = True\n",
     "    \n",
     "    # before calculating the bond length, we need to standardize the cell\n",
-    "    # to obtain the bounding box uf the unit cell to normalize the derivatives\n",
+    "    # to obtain the characteristic lengths of the unit cell to normalize the derivatives\n",
     "    structure = qe_helper.qe_standardize_cell(structure, symprec=0.1)\n",
+    "    try:\n",
+    "        _, structure = qe_helper.qe_get_ibrav(structure)\n",
+    "    except:\n",
+    "        print(f\"Using standardize_cell for {calc_id}\")\n",
+    "        structure = qe_helper.qe_standardize_cell(structure, symprec=0.1)\n",
     "    boxlengths = np.max(np.abs(structure.lattice.matrix),axis=0)\n",
     "\n",
     "    # create a supercell to estimated the average minimal bond length more easily\n",
