changed plot format

--- a/analysis/data_visualization_paper.ipynb
+++ b/analysis/data_visualization_paper.ipynb
@@ -372,7 +372,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/paper/wm_total_eb.png\")"
+    "fig.savefig(\"../plots/paper/wm_total_eb.pdf\")"
    ]
   },
   {
@@ -452,7 +452,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/paper/wm_elec_eb.png\")"
+    "fig.savefig(\"../plots/paper/wm_elec_eb.pdf\")"
    ]
   },
   {
@@ -524,7 +524,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/paper/mlwf_eb.png\")"
+    "fig.savefig(\"../plots/paper/mlwf_eb.pdf\")"
    ]
   },
   {
@@ -597,7 +597,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/paper/vbm_deriv_eb.png\")"
+    "fig.savefig(\"../plots/paper/vbm_deriv_eb.pdf\")"
    ]
   },
   {
@@ -666,7 +666,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/paper/nv_eb.png\")"
+    "fig.savefig(\"../plots/paper/nv_eb.pdf\")"
    ]
   },
   {
@@ -735,7 +735,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/paper/nvnc_eb.png\")"
+    "fig.savefig(\"../plots/paper/nvnc_eb.pdf\")"
    ]
   },
   {
@@ -1092,7 +1092,7 @@
     "plt.subplots_adjust(hspace=0.65, wspace=0.3)\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/paper/1d_relations.png\")"
+    "fig.savefig(\"../plots/paper/1d_relations.pdf\")"
    ]
   },
   {
@@ -1177,7 +1177,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/paper/nvnc_dvorak_highlighted.png\")"
+    "fig.savefig(\"../plots/paper/nvnc_dvorak_highlighted.pdf\")"
    ]
   },
   {
@@ -1267,7 +1267,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/paper/vbm_deriv_wm_total_eb.png\")"
+    "fig.savefig(\"../plots/paper/vbm_deriv_wm_total_eb.pdf\")"
    ]
   },
   {
@@ -1463,7 +1463,7 @@
     "axes[1].annotate(r\"C$_3$N$_4$\", xy=(result_df[\"vbm_deriv\"][\"mp-1985\"], result_df[\"elec_eps\"][\"mp-1985\"] + result_df[\"ionic_eps\"][\"mp-1985\"]),\n",
     "                 xycoords=\"data\", xytext=(-35, -12), textcoords=\"offset points\", arrowprops=dict(arrowstyle=\"->\"), fontsize=fs-4)\n",
     "axes[1].annotate(r\"As$_2$Se$_3$\", xy=(result_df[\"vbm_deriv\"][\"mp-909\"], result_df[\"elec_eps\"][\"mp-909\"] + result_df[\"ionic_eps\"][\"mp-909\"]),\n",
-    "                 xycoords=\"data\", xytext=(20, 10), textcoords=\"offset points\", arrowprops=dict(arrowstyle=\"->\"), fontsize=fs-4)\n",
+    "                 xycoords=\"data\", xytext=(20, -10), textcoords=\"offset points\", arrowprops=dict(arrowstyle=\"->\"), fontsize=fs-4)\n",
     "\n",
     "# subplot 3\n",
     "for i,m in enumerate(all_mats):\n",
@@ -1515,7 +1515,7 @@
     "fig.subplots_adjust(hspace=0)\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/paper/2d_relations_classification.png\")"
+    "fig.savefig(\"../plots/paper/2d_relations_classification.pdf\")"
    ]
   }
  ],
@@ -1535,7 +1535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
