--- a/analysis/data_visualization_supplement.ipynb
+++ b/analysis/data_visualization_supplement.ipynb
@@ -365,7 +365,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/me_eb.png\")"
+    "fig.savefig(\"../plots/supplement/me_eb.pdf\")"
    ]
   },
   {
@@ -438,7 +438,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/mh_eb.png\")"
+    "fig.savefig(\"../plots/supplement/mh_eb.pdf\")"
    ]
   },
   {
@@ -503,14 +503,14 @@
     "ax.yaxis.set_ticks([0, 1000, 2000, 3000, 4000])\n",
     "\n",
     "# axis labels\n",
-    "ax.set_xlabel(r\"$\\mu_{ex}$\", size=fs)\n",
+    "ax.set_xlabel(r\"$\\mu_{X}$\", size=fs)\n",
     "ax.set_ylabel(r\"$E_b$ (meV)\", size=fs)\n",
     "\n",
     "# fix layout\n",
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/eff_mass_eb.png\")"
+    "fig.savefig(\"../plots/supplement/eff_mass_eb.pdf\")"
    ]
   },
   {
@@ -583,7 +583,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/spread_eb.png\")"
+    "fig.savefig(\"../plots/supplement/spread_eb.pdf\")"
    ]
   },
   {
@@ -656,7 +656,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/vbm_deriv_unnorm_eb.png\")"
+    "fig.savefig(\"../plots/supplement/vbm_deriv_unnorm_eb.pdf\")"
    ]
   },
   {
@@ -728,7 +728,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/nc_eb.png\")"
+    "fig.savefig(\"../plots/supplement/nc_eb.pdf\")"
    ]
   },
   {
@@ -911,7 +911,7 @@
     "axes[1,0].yaxis.set_ticks([0, 1000, 2000, 3000, 4000])\n",
     "\n",
     "# axis labels\n",
-    "axes[1,0].set_xlabel(r\"$\\mu_{ex}$\", size=fs)\n",
+    "axes[1,0].set_xlabel(r\"$\\mu_{X}$\", size=fs)\n",
     "\n",
     "\"\"\"\"\"\"\n",
     "\n",
@@ -1072,7 +1072,7 @@
     "plt.subplots_adjust(hspace=0.65, wspace=0.3)\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/1d_relations.png\")"
+    "fig.savefig(\"../plots/supplement/1d_relations.pdf\")"
    ]
   },
   {
@@ -1178,7 +1178,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/nvnc_dvorak_all_binary.png\")"
+    "fig.savefig(\"../plots/supplement/nvnc_dvorak_all_binary.pdf\")"
    ]
   },
   {
@@ -1268,7 +1268,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/nv_wm_total_eb.png\")"
+    "fig.savefig(\"../plots/supplement/nv_wm_total_eb.pdf\")"
    ]
   },
   {
@@ -1328,7 +1328,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/nv_vbm_deriv_vbonly_eb.png\")"
+    "fig.savefig(\"../plots/supplement/nv_vbm_deriv_vbonly_eb.pdf\")"
    ]
   },
   {
@@ -1388,7 +1388,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/spread_direct_gap_eb.png\")"
+    "fig.savefig(\"../plots/supplement/spread_direct_gap_eb.pdf\")"
    ]
   },
   {
@@ -1448,7 +1448,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/spread_elec_eps_eb.png\")"
+    "fig.savefig(\"../plots/supplement/spread_elec_eps_eb.pdf\")"
    ]
   },
   {
@@ -1508,7 +1508,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/vbm_deriv_elec_eps_eb.png\")"
+    "fig.savefig(\"../plots/supplement/vbm_deriv_elec_eps_eb.pdf\")"
    ]
   },
   {
@@ -1568,7 +1568,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/vbm_deriv_ionic_eps_eb.png\")"
+    "fig.savefig(\"../plots/supplement/vbm_deriv_ionic_eps_eb.pdf\")"
    ]
   },
   {
@@ -1840,7 +1840,7 @@
     "plt.subplots_adjust(hspace=0.65, wspace=0.4)\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/2d_relations.png\")"
+    "fig.savefig(\"../plots/supplement/2d_relations.pdf\")"
    ]
   },
   {
@@ -2131,7 +2131,7 @@
     "plt.subplots_adjust(hspace=0.65, wspace=0.3)\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/2d_relations_classification.png\")"
+    "fig.savefig(\"../plots/supplement/2d_relations_classification.pdf\")"
    ]
   },
   {
@@ -2221,7 +2221,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/mlwf_wm_total_eb.png\")"
+    "fig.savefig(\"../plots/supplement/mlwf_wm_total_eb.pdf\")"
    ]
   },
   {
@@ -2328,7 +2328,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/mlwf_wm_total_eb_class.png\")"
+    "fig.savefig(\"../plots/supplement/mlwf_wm_total_eb_class.pdf\")"
    ]
   },
   {
@@ -2371,7 +2371,7 @@
     "# colorbar\n",
     "cmap = fig.colorbar(plts[3], shrink=0.75, aspect=30, pad=0.05)\n",
     "cmap.set_label(\n",
-    "    r\"$E_b$ (meV)\",\n",
+    "    r\"$E_b^\\mathrm{WM}$ (meV)\",\n",
     "    rotation=90,\n",
     "    fontsize=fs,\n",
     ")\n",
@@ -2506,7 +2506,185 @@
     "plt.subplots_adjust(hspace=0.65, wspace=0.37)\n",
     "\n",
     "# save the figure\n",
-    "fig.savefig(\"../plots/supplement/2d_mlwfs.png\")"
+    "fig.savefig(\"../plots/supplement/2d_mlwfs.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# classification\n",
+    "cutoff1 = 50\n",
+    "cutoff2 = 150\n",
+    "cutoff_colors = [\"b\", \"tab:green\", \"r\"]\n",
+    "\n",
+    "# figure size (tested)\n",
+    "width = (3 + 3/8) * 2\n",
+    "height = 2.55\n",
+    "\n",
+    "# text size\n",
+    "fs = 12\n",
+    "\n",
+    "# figure\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(width, height), facecolor=\"w\", dpi=600)  \n",
+    "\n",
+    "# add (a), (b), (c), ... to the subplots\n",
+    "axes[0].text(-0.40, 1.15, r\"(a)\", transform=axes[0].transAxes, size=fs)\n",
+    "axes[1].text(-0.25, 1.15, r\"(b)\", transform=axes[1].transAxes, size=fs)\n",
+    "\n",
+    "# color normalizer\n",
+    "min_color = np.log10(min(result_df[\"binding_energy\"]))\n",
+    "max_color = np.log10(max(result_df[\"binding_energy\"]))\n",
+    "\n",
+    "# 2d plot\n",
+    "plts = []\n",
+    "for i,m in enumerate(all_mats):\n",
+    "    plts.append(axes[0].scatter(result_df[\"vbm_deriv_unnorm\"][m], result_df[\"WM_total\"][m], \n",
+    "                                s=marker_size, c=np.log10(result_df[\"binding_energy\"][m]),\n",
+    "                                marker=all_markers[i], label=all_labels[i], vmin=min_color, \n",
+    "                                vmax=max_color, cmap=\"viridis_r\"))\n",
+    "    \n",
+    "# colorbar\n",
+    "cmap = fig.colorbar(plts[3], shrink=0.75, aspect=30, pad=0.05)\n",
+    "cmap.set_label(\n",
+    "    r\"$E_b$ (meV)\",\n",
+    "    rotation=90,\n",
+    "    fontsize=fs,\n",
+    ")\n",
+    "cmap.ax.tick_params(labelsize=fs-4)\n",
+    "cmap.ax.set_yticklabels([\"0\", \"10\", \"100\", \"1000\"], fontsize=fs-4)      \n",
+    "\n",
+    "# inset\n",
+    "axins = inset_axes(axes[0], width=1.0, height=0.8, bbox_to_anchor=(.28, .2, .6, .2),\n",
+    "                   bbox_transform=axes[0].transAxes, loc=3)\n",
+    "\n",
+    "# mark the inset\n",
+    "mark_inset(axes[0], axins, loc1=2, loc2=4, fc=\"none\", ec=\"k\", linewidth=0.5, linestyle=\"--\")    \n",
+    "axins.set_facecolor(\"w\")\n",
+    "\n",
+    "# plot everything\n",
+    "for i,m in enumerate(all_mats):\n",
+    "    axins.scatter(result_df[\"vbm_deriv_unnorm\"][m], result_df[\"WM_total\"][m], \n",
+    "                  s=marker_size, c=np.log10(result_df[\"binding_energy\"][m]),\n",
+    "                  marker=all_markers[i], label=all_labels[i], vmin=min_color, \n",
+    "                  vmax=max_color, cmap=\"viridis_r\")\n",
+    "\n",
+    "# axis inset ticks\n",
+    "axins.xaxis.set_tick_params(labelsize=fs-4)\n",
+    "axins.yaxis.set_tick_params(labelsize=fs-4)\n",
+    "axins.tick_params(bottom=True, top=True, left=True, right=True, which=\"both\", \n",
+    "                  width=1, length=2, direction=\"in\")\n",
+    "axins.tick_params(labelbottom=False, labeltop=True, labelleft=False, labelright=True)\n",
+    "\n",
+    "# axis limits inset \n",
+    "axins.set_xlim([0.15, 0.7])\n",
+    "axins.set_ylim([-10, 100])\n",
+    "\n",
+    "# axis ticks inset\n",
+    "axins.xaxis.set_ticks([0.2, 0.4, 0.6]) \n",
+    "axins.yaxis.set_ticks([0, 50, 100])   \n",
+    "\n",
+    "# axis ticks\n",
+    "axes[0].xaxis.set_tick_params(labelsize=fs)\n",
+    "axes[0].yaxis.set_tick_params(labelsize=fs)\n",
+    "axes[0].tick_params(bottom=True, top=True, left=True, right=True, which=\"both\", \n",
+    "                    width=1, length=4, direction=\"out\")\n",
+    "axes[0].tick_params(labelbottom=True, labeltop=False, labelleft=True, labelright=False)\n",
+    "\n",
+    "# axis labels\n",
+    "axes[0].set_xlabel(r\"$\\tilde{D}$ (eV$\\textrm{\\AA}$)\", size=fs)\n",
+    "axes[0].set_ylabel(r\"$E_b^\\mathrm{WM}$ (meV)\", size=fs)\n",
+    "\n",
+    "# axis ticks \n",
+    "axes[0].xaxis.set_ticks([0.0, 0.5, 1, 1.5, 2])\n",
+    "axes[0].yaxis.set_ticks([0, 1000, 2000, 3000, 4000, 5000])\n",
+    "\n",
+    "\n",
+    "\"\"\"\"\"\"\n",
+    "\n",
+    "# 2d plot\n",
+    "for i,m in enumerate(all_mats):\n",
+    "    axes[1].scatter(result_df[\"vbm_deriv_unnorm\"][m], result_df[\"WM_total\"][m], \n",
+    "                    s=marker_size, c=cutoff_colors[0],\n",
+    "                    marker=all_markers[i], label=all_labels[i])\n",
+    "    idx_cutoff1 = result_df[\"binding_energy\"][m] > cutoff1\n",
+    "    if any(idx_cutoff1):\n",
+    "        axes[1].scatter(result_df[\"vbm_deriv_unnorm\"][m][idx_cutoff1], \n",
+    "                        result_df[\"WM_total\"][m][idx_cutoff1], \n",
+    "                        s=marker_size, c=cutoff_colors[1],\n",
+    "                        marker=all_markers[i], label=all_labels[i])\n",
+    "    idx_cutoff2 = result_df[\"binding_energy\"][m] > cutoff2\n",
+    "    if any(idx_cutoff2):\n",
+    "        axes[1].scatter(result_df[\"vbm_deriv_unnorm\"][m][idx_cutoff2], \n",
+    "                        result_df[\"WM_total\"][m][idx_cutoff2], \n",
+    "                        s=marker_size, c=cutoff_colors[2],\n",
+    "                        marker=all_markers[i], label=all_labels[i])   \n",
+    "        \n",
+    "# inset\n",
+    "axins = inset_axes(axes[1], width=1.0, height=0.8, bbox_to_anchor=(.42, .2, .6, .2),\n",
+    "                   bbox_transform=axes[1].transAxes, loc=3)\n",
+    "\n",
+    "# mark the inset\n",
+    "mark_inset(axes[1], axins, loc1=2, loc2=4, fc=\"none\", ec=\"k\", linewidth=0.5, linestyle=\"--\")    \n",
+    "axins.set_facecolor(\"w\")\n",
+    "\n",
+    "# plot everything\n",
+    "for i,m in enumerate(all_mats):\n",
+    "    axins.scatter(result_df[\"vbm_deriv_unnorm\"][m], result_df[\"WM_total\"][m], \n",
+    "                  s=marker_size, c=cutoff_colors[0],\n",
+    "                  marker=all_markers[i], label=all_labels[i])\n",
+    "    idx_cutoff1 = result_df[\"binding_energy\"][m] > cutoff1\n",
+    "    if any(idx_cutoff1):\n",
+    "        axins.scatter(result_df[\"vbm_deriv_unnorm\"][m][idx_cutoff1], \n",
+    "                      result_df[\"WM_total\"][m][idx_cutoff1], \n",
+    "                      s=marker_size, c=cutoff_colors[1],\n",
+    "                      marker=all_markers[i], label=all_labels[i])\n",
+    "    idx_cutoff2 = result_df[\"binding_energy\"][m] > cutoff2\n",
+    "    if any(idx_cutoff2):\n",
+    "        axins.scatter(result_df[\"vbm_deriv_unnorm\"][m][idx_cutoff2], \n",
+    "                      result_df[\"WM_total\"][m][idx_cutoff2], \n",
+    "                      s=marker_size, c=cutoff_colors[2],\n",
+    "                      marker=all_markers[i], label=all_labels[i])   \n",
+    "\n",
+    "# axis inset ticks\n",
+    "axins.xaxis.set_tick_params(labelsize=fs-4)\n",
+    "axins.yaxis.set_tick_params(labelsize=fs-4)\n",
+    "axins.tick_params(bottom=True, top=True, left=True, right=True, which=\"both\", \n",
+    "                  width=1, length=2, direction=\"in\")\n",
+    "axins.tick_params(labelbottom=False, labeltop=True, labelleft=False, labelright=True)\n",
+    "\n",
+    "# axis limits inset \n",
+    "axins.set_xlim([0.15, 0.7])\n",
+    "axins.set_ylim([-10, 100])\n",
+    "\n",
+    "# axis ticks inset\n",
+    "axins.xaxis.set_ticks([0.2, 0.4, 0.6]) \n",
+    "axins.yaxis.set_ticks([0, 50, 100])   \n",
+    "\n",
+    "# axis ticks\n",
+    "axes[1].xaxis.set_tick_params(labelsize=fs)\n",
+    "axes[1].yaxis.set_tick_params(labelsize=fs)\n",
+    "axes[1].tick_params(bottom=True, top=True, left=True, right=True, which=\"both\", \n",
+    "                      width=1, length=4, direction=\"out\")\n",
+    "axes[1].tick_params(labelbottom=True, labeltop=False, labelleft=True, labelright=False)\n",
+    "\n",
+    "# axis labels\n",
+    "axes[1].set_xlabel(r\"$\\tilde{D}$ (eV$\\textrm{\\AA}$)\", size=fs)\n",
+    "\n",
+    "# axis ticks \n",
+    "axes[1].xaxis.set_ticks([0.0, 0.5, 1, 1.5, 2])\n",
+    "axes[1].yaxis.set_ticks([0, 1000, 2000, 3000, 4000, 5000])\n",
+    "\n",
+    "\"\"\"\"\"\"\n",
+    "\n",
+    "# fix layout\n",
+    "fig.tight_layout()\n",
+    "plt.subplots_adjust(hspace=0.65, wspace=0.37)\n",
+    "\n",
+    "# save the figure\n",
+    "fig.savefig(\"../plots/supplement/2d_tildeD.pdf\")"
    ]
   }
  ],
@@ -2526,7 +2704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
