--- a/analysis/data_visualization_supplement.ipynb
+++ b/analysis/data_visualization_supplement.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\grune\\anaconda3\\envs\\ml\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# external imports\n",
     "import os\n",
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,144 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "cannot access local variable 'vbm_derivs_L2' where it is not associated with a value",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# create the data array\u001b[39;00m\n\u001b[0;32m     14\u001b[0m calc_ids \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mlistdir(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../calc/\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 16\u001b[0m temp_meta, temp_num \u001b[38;5;241m=\u001b[39m \u001b[43mget_calc_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcalc_ids\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbinding_energies\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[2], line 231\u001b[0m, in \u001b[0;36mget_calc_data\u001b[1;34m(calc_id, binding_energies)\u001b[0m\n\u001b[0;32m    210\u001b[0m \u001b[38;5;66;03m# output arrays split into numeric and string types\u001b[39;00m\n\u001b[0;32m    211\u001b[0m meta_data \u001b[38;5;241m=\u001b[39m [calc_id, structure_name]\n\u001b[0;32m    212\u001b[0m num_data \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m    213\u001b[0m     bond_length,\n\u001b[0;32m    214\u001b[0m     binding_energy,\n\u001b[0;32m    215\u001b[0m     direct_gap,\n\u001b[0;32m    216\u001b[0m     indirect_gap,\n\u001b[0;32m    217\u001b[0m     hole_mass,\n\u001b[0;32m    218\u001b[0m     elec_mass,\n\u001b[0;32m    219\u001b[0m     eff_mass,\n\u001b[0;32m    220\u001b[0m     elec_eps,\n\u001b[0;32m    221\u001b[0m     ionic_eps,\n\u001b[0;32m    222\u001b[0m     omega_irr,\n\u001b[0;32m    223\u001b[0m     distance_mean,\n\u001b[0;32m    224\u001b[0m     vbm_deriv_unnorm,\n\u001b[0;32m    225\u001b[0m     vbm_deriv,\n\u001b[0;32m    226\u001b[0m     nv_unnorm,\n\u001b[0;32m    227\u001b[0m     nv,\n\u001b[0;32m    228\u001b[0m     nc_unnorm,\n\u001b[0;32m    229\u001b[0m     nc,\n\u001b[0;32m    230\u001b[0m     binary,\n\u001b[1;32m--> 231\u001b[0m     \u001b[43mvbm_derivs_L2\u001b[49m,\n\u001b[0;32m    232\u001b[0m     nv_dict,\n\u001b[0;32m    233\u001b[0m     nc_dict,\n\u001b[0;32m    234\u001b[0m ]\n\u001b[0;32m    236\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m meta_data, num_data\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: cannot access local variable 'vbm_derivs_L2' where it is not associated with a value"
-     ]
-    }
-   ],
-   "source": [
-    "# parse the experimental binding energies\n",
-    "binding_energies = pd.read_csv(\n",
-    "    os.path.join(\"..\", \"expdata\", \"exp_exciton_binding.csv\"),\n",
-    "    header=None,\n",
-    "    names=[\"id\", \"binding_energy\", \"bond_length\", \"name\"],\n",
-    ")\n",
-    "binding_energies = binding_energies.set_index([\"id\"])\n",
-    "\n",
-    "# initialize lists\n",
-    "meta_data = []\n",
-    "num_data = []\n",
-    "\n",
-    "# create the data array\n",
-    "calc_ids = os.listdir(\"../calc/\")\n",
-    "\n",
-    "temp_meta, temp_num = get_calc_data(calc_ids[0], binding_energies)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error in mp-1087\n",
-      "Error in mp-111\n",
-      "Error in mp-1138\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\grune\\anaconda3\\envs\\ml\\Lib\\site-packages\\pymatgen\\core\\periodic_table.py:219: UserWarning: No Pauling electronegativity for Ne. Setting to NaN. This has no physical meaning, and is mainly done to avoid errors caused by the code expecting a float.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error in mp-1143\n",
-      "Error in mp-1228891\n",
-      "Error in mp-1253\n",
-      "Error in mp-1265\n",
-      "Error in mp-1342\n",
-      "Error in mp-1415\n",
-      "Error in mp-149\n",
-      "Error in mp-1500\n",
-      "Error in mp-1550\n",
-      "Error in mp-1672\n",
-      "Error in mp-1784\n",
-      "Error in mp-1985\n",
-      "Error in mp-20351\n",
-      "Error in mp-2064\n",
-      "Error in mp-2160\n",
-      "Error in mp-22862\n",
-      "Error in mp-22870\n",
-      "Error in mp-22875\n",
-      "Error in mp-22898\n",
-      "Error in mp-22903\n",
-      "Error in mp-22916\n",
-      "Error in mp-23037\n",
-      "Error in mp-23155\n",
-      "Error in mp-23167\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\grune\\anaconda3\\envs\\ml\\Lib\\site-packages\\pymatgen\\core\\periodic_table.py:219: UserWarning: No Pauling electronegativity for Ar. Setting to NaN. This has no physical meaning, and is mainly done to avoid errors caused by the code expecting a float.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error in mp-23193\n",
-      "Error in mp-23202\n",
-      "Error in mp-23251\n",
-      "Error in mp-23268\n",
-      "Error in mp-23291\n",
-      "Error in mp-23703\n",
-      "Error in mp-2472\n",
-      "Error in mp-2490\n",
-      "Error in mp-2534\n",
-      "Error in mp-2605\n",
-      "Error in mp-2758\n",
-      "Error in mp-28077\n",
-      "Error in mp-463\n",
-      "Error in mp-611517\n",
-      "Error in mp-612118\n",
-      "Error in mp-66\n",
-      "Error in mp-661\n",
-      "Error in mp-682\n",
-      "Error in mp-732337\n",
-      "Error in mp-804\n",
-      "Error in mp-8062\n",
-      "Error in mp-856\n",
-      "Using standardize_cell for mp-909\n",
-      "Error in mp-909\n",
-      "Error in mp-995214\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "too many indices for array: array is 1-dimensional, but 2 were indexed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 64\u001b[0m\n\u001b[0;32m     39\u001b[0m var_names \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m     40\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbond_length\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     41\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinding_energy\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnc_dict\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     61\u001b[0m ]\n\u001b[0;32m     63\u001b[0m \u001b[38;5;66;03m# convert the data to a dataframe\u001b[39;00m\n\u001b[1;32m---> 64\u001b[0m result_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[43mmeta_data\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m, columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m], index\u001b[38;5;241m=\u001b[39mmeta_data[:, \u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m     66\u001b[0m \u001b[38;5;66;03m# append the rest\u001b[39;00m\n\u001b[0;32m     67\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, v \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(var_names):\n",
-      "\u001b[1;31mIndexError\u001b[0m: too many indices for array: array is 1-dimensional, but 2 were indexed"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Data parsing and formatting the exciton binding energy dataset. \n",
@@ -3582,6 +3438,40 @@
     "fig.tight_layout()\n",
     "# save the figure\n",
     "fig.savefig(\"../plots/supplement/nc_changes.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# figure size (tested)\n",
+    "width = 3 + 3 / 8\n",
+    "height = 2.5\n",
+    "\n",
+    "# text size\n",
+    "fs = 12\n",
+    "\n",
+    "# figure\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(width, height), facecolor=\"w\", dpi=600)\n",
+    "ax.xaxis.set_tick_params(labelsize=fs)\n",
+    "ax.yaxis.set_tick_params(labelsize=fs)\n",
+    "ax.tick_params(\n",
+    "    bottom=True,\n",
+    "    top=True,\n",
+    "    left=True,\n",
+    "    right=True,\n",
+    "    which=\"both\",\n",
+    "    width=1,\n",
+    "    length=4,\n",
+    "    direction=\"out\",\n",
+    ")\n",
+    "ax.scatter(result_df[\"vbm_deriv\"], result_df[\"vbm_deriv_L2\"])\n",
+    "plt.xlabel(r\"$\\tilde{D}_{L1}$\")\n",
+    "plt.ylabel(r\"$\\tilde{D}_{L2}$\")\n",
+    "fig.tight_layout()\n",
+    "fig.savefig(\"../plots/supplement/vbm_deriv_L1L2.pdf\")"
    ]
   }
  ],
